fix overlapping with footer, add line effect to report card

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1139,7 +1139,7 @@ input[type="radio"] {
 .tips-image {
   border-radius: 5%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-  height: 300px;
+  height: 250px;
 }
 
 #geo-input {
